block 3rd party cookies from youtube embedded video players

--- a/src/app/projects/flipdotdisplay/flip_dot_display.html
+++ b/src/app/projects/flipdotdisplay/flip_dot_display.html
@@ -13,7 +13,7 @@
       (not of the same wall) that gives an idea of what it was like:
     </p>
 
-    <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/s94PscZJ5EE" width="fit-content" frameborder="0"
+    <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/s94PscZJ5EE" width="fit-content" frameborder="0"
       allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 
     <p>
