--- a/src/app/travels/burning_man_2023/burning_man_2023_page.html
+++ b/src/app/travels/burning_man_2023/burning_man_2023_page.html
@@ -53,7 +53,7 @@
   <p>
     We ended up on top of their cargo containers at some point and had a great view of the playa.
   </p>
-  <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/OhkUZUHFtwI" frameborder="0"
+  <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/OhkUZUHFtwI" frameborder="0"
   allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
   <p>
     After some time we biked to the inner-most ring road of the city, The Esplanade. This is the highest trafficked
@@ -68,7 +68,7 @@
     the scaffolding to the second story shelving to watch, and saw a man on stage holding an upside-down woman above
     him, while she was juggling a stick with her feet, while the stick was on fire. Very impressive!
   </p>
-  <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/G03xm09LUzw" width="fit-content" frameborder="0"
+  <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/G03xm09LUzw" width="fit-content" frameborder="0"
   allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
   
   <p>
@@ -214,13 +214,13 @@
   <p>
     Watching the man burn was incredible. Not only was it by far the largest bonfire I'd ever seen by far, but it had
     legitimately the best fireworks show I've ever seen in my life. It's not by video, but
-    <a href="https://www.youtube.com/watch?v=dHDV_VB6dkI" target="_blank">here's a recording of it</a>. I vividly
+    <a href="https://www.youtube-nocookie.com/watch?v=dHDV_VB6dkI" target="_blank">here's a recording of it</a>. I vividly
     remember being told by friends to never look away from the man once the official start time elapses, because there
     would be a large explosion to signal the start of the man burning. That explosion came after the fireworks, and it
     was this perfectly round ball of light radiant heat you could feel on your face from a quarter mile away that
     materialized out of nowhere in an instant. The audible <b>POP!</b> of it hits you delayed and it really drives home
     the size of the pyrotechnics going on. Here's my video of the man falling down after some time:
-    <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/BtWrjoaa3G8" width="fit-content" frameborder="0"
+    <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/BtWrjoaa3G8" width="fit-content" frameborder="0"
       allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
   </p>
   <img loading="lazy" imgurId="CL5Ra65" />
@@ -247,7 +247,7 @@
     display for the main night, car after car lined up pouring out music and light.
   </p>
   <img loading="lazy" imgurId="rYbtABg" />
-  <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/Fe9a2Vg-2rU" width="fit-content" frameborder="0"
+  <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/Fe9a2Vg-2rU" width="fit-content" frameborder="0"
   allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
   <p>
     At some point I walked up onto the top floor of an art car built to look like a small church called The House of
@@ -274,7 +274,7 @@
     my exit was super easy and fast. I was allowed to lane split through the line all the way back to Reno, and I used
     a GoPro to show what the line back to the paved road was like.
   </p>
-  <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/uQ_kAJ2N1Lw" frameborder="0"
+  <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/uQ_kAJ2N1Lw" frameborder="0"
   allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 
 </mat-card-content>
