--- a/src/app/projects/mountainboard/mountainboard_page.html
+++ b/src/app/projects/mountainboard/mountainboard_page.html
@@ -10,7 +10,7 @@
       a road bicycle as a mountainboard is to a skateboard. I first learned about mountainboards from this youtube
       video I was linked to while watching snowboarding videos:
     </p>
-    <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/65AcTk5Hcmg" frameborder="0"
+    <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/65AcTk5Hcmg" frameborder="0"
     allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 
     <p>
