Creating lightweight youtube player placeholder
Should reduce the blocking time on main thread by no loading the youtube videos unless they are clicked on by the user.

--- a/src/app/projects/mountainboard/mountainboard_page.html
+++ b/src/app/projects/mountainboard/mountainboard_page.html
@@ -10,8 +10,8 @@
       a road bicycle as a mountainboard is to a skateboard. I first learned about mountainboards from this youtube
       video I was linked to while watching snowboarding videos:
     </p>
-    <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/65AcTk5Hcmg" frameborder="0"
-    allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
+
+    <youtube-placeholder videoId="65AcTk5Hcmg"></youtube-placeholder>
 
     <p>
       It was immediately interesting to me, but when first discovering this around 2018 it was such a niche market that
