--- a/src/app/travels/mauritania_trip/mauritania_trip_page.html
+++ b/src/app/travels/mauritania_trip/mauritania_trip_page.html
@@ -129,10 +129,11 @@
     seafloor. We stopped around 2pm for a break to beat the heat of the day and had lunch under a big tree. After lunch
     we hiked up the largest ridgeline yet. It was incredibly steep, all things considered and climbed higher than all
     the dunes before this one.
+    </p>
 
-    <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/MbiAI1LF5Ec" frameborder="0"
-      allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
-    <img loading="lazy" imgurId="3wcLMFN" />
+    <youtube-placeholder videoId="MbiAI1LF5Ec"/>
+
+    <p>
     Crossing over the top you could look out to the next valley of smaller dunes and an oasis. If you look far enough
     you could see north-to-south stretching dune ridgelines that climb very tall, with relative valleys between them
     filled with smaller dunes for a while. The oasis was surprisingly empty.
@@ -194,10 +195,11 @@
     breakfast of crepes then packed up our cargo onto the camels and continued on. After leaving the small rolling dunes
     section we climbed slightly uphill till a relative plateau. The plateau continued for about a mile until it dropped
     off again back towards the valley, and gave way to a great view of the valley and distant mountain ranges.
+    </p>
+    
+    <youtube-placeholder videoId="wvpk91oa3l4"/>
 
-    <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/wvpk91oa3l4" title="YouTube video player"
-      frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share"
-      allowfullscreen></iframe>
+    <p>
     Those mountain ridges in that video are Mt. Zarga and what we would climb. We continued on and passed by the
     remains of a camel. Continuing
     further we eventually reached the mountain before lunch. Nema told me that the two of us would climb the mountain
@@ -207,10 +209,11 @@
     I was so tired I only got a couple shots. I wish I had better angles but this will have to do. After a rest at the
     peak we descended down the north ridgeline of this range and met our camels halfway down in a small alcove sheltered
     by a large boulder above us for shade.
+    </p>
 
-    <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/gcYJ2fIjods" title="YouTube video player"
-      frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share"
-      allowfullscreen></iframe>
+    <youtube-placeholder videoId="gcYJ2fIjods"/>
+
+    <p>
     We had lunch here, more Mauritanian couscous with canned fish and carrots. Unfortunately the wind picked up just as we
     started eating and blew a bunch of sand into our food. Oh well, you really just have to ignore the grit. All the
     food typically has some degree of grit because the sand gets literally everywhere. You get used to not bringing your
@@ -317,9 +320,10 @@
     before flowing down in a stream winding through the grounds throughout the area a near totally filled ceiling of
     palm fronds cover the soft sandy floor between both cliff faces. Water dribbles out of the lower half of the cliffs
     and forms stalagmites.
+    </p>
 
-    <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/bQlAgPh4OO8" frameborder="0"
-      allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
+    <youtube-placeholder videoId="bQlAgPh4OO8"/>
+    <p>
     <img loading="lazy" imgurId="tZmWMxJ" />
     <img loading="lazy" imgurId="YhNDFqZ" />
 
@@ -363,9 +367,10 @@
     He told stories about his time in Senegal, The Gambia, and Guinea Bissau. We all ripped apart pieces of baguette
     bread and used it to scoop up rice and camel meat from a communal plate while continuing to share travel stories in
     mixtures of English and French, and it was all very good.
+    </p>
 
-    <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/7jbgUn1fCZg" frameborder="0"
-      allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
+    <youtube-placeholder videoId="7jbgUn1fCZg"/>
+    <p>
     If you're wondering, camel meat tastes good. The fat is incredibly chewy; probably the chewiest fat of any animal
     I've eaten. The meat is somewhere similar to beef but it has a richer, more oily quality to it. It doesn't melt in
     your mouth, but when you decisively bite into it, it gives way and the flavor is rewarding.
@@ -429,8 +434,9 @@
     the interlocking hoppers as the locomotive started pulling them all. When it reached mine it was almost deafening
     and the jolt nearly sent me falling backwards on my back. As the train pulled out of town, I took a few more photos
     and then put on the mask and goggles. We were on our way, and I had made it on.
-    <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/HY9zQ_lwhS4" frameborder="0"
-      allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
+    </p>
+    <youtube-placeholder videoId="HY9zQ_lwhS4"/>
+    <p>
     <img loading="lazy" imgurId="y1CLtwA" />
     <img loading="lazy" imgurId="ckQMhhZ" />
     After some time the train reached full speed and you could see the fine dust being blown off the raw ore into the
