--- a/src/app/travels/burning_man_2023/burning_man_2023_page.html
+++ b/src/app/travels/burning_man_2023/burning_man_2023_page.html
@@ -53,8 +53,7 @@
   <p>
     We ended up on top of their cargo containers at some point and had a great view of the playa.
   </p>
-  <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/OhkUZUHFtwI" frameborder="0"
-  allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
+  <youtube-placeholder videoId="OhkUZUHFtwI"/>
   <p>
     After some time we biked to the inner-most ring road of the city, The Esplanade. This is the highest trafficked
     road in Burning Man, as your shortest route from anywhere to anywhere else almost always passes through this ring
@@ -68,8 +67,7 @@
     the scaffolding to the second story shelving to watch, and saw a man on stage holding an upside-down woman above
     him, while she was juggling a stick with her feet, while the stick was on fire. Very impressive!
   </p>
-  <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/G03xm09LUzw" width="fit-content" frameborder="0"
-  allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
+  <youtube-placeholder videoId="G03xm09LUzw"/>
   
   <p>
     Continuing counterclockwise up of the Esplanade from Brulée, we made our way to Opulent Temple, which supposedly
@@ -220,9 +218,8 @@
     was this perfectly round ball of light radiant heat you could feel on your face from a quarter mile away that
     materialized out of nowhere in an instant. The audible <b>POP!</b> of it hits you delayed and it really drives home
     the size of the pyrotechnics going on. Here's my video of the man falling down after some time:
-    <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/BtWrjoaa3G8" width="fit-content" frameborder="0"
-      allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
   </p>
+  <youtube-placeholder videoId="BtWrjoaa3G8"/>
   <img loading="lazy" imgurId="CL5Ra65" />
   <p>
     As the man and structure he's on burns down to a smoldering hill and the radiant heat begins to border on being
@@ -247,8 +244,7 @@
     display for the main night, car after car lined up pouring out music and light.
   </p>
   <img loading="lazy" imgurId="rYbtABg" />
-  <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/Fe9a2Vg-2rU" width="fit-content" frameborder="0"
-  allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
+  <youtube-placeholder videoId="Fe9a2Vg-2rU"/>
   <p>
     At some point I walked up onto the top floor of an art car built to look like a small church called The House of
     Bass, where I got this next picture looking out at the ring of other art cars around where the man once burned.
@@ -274,8 +270,7 @@
     my exit was super easy and fast. I was allowed to lane split through the line all the way back to Reno, and I used
     a GoPro to show what the line back to the paved road was like.
   </p>
-  <iframe loading="lazy" class="youtube-player" src="https://www.youtube-nocookie.com/embed/uQ_kAJ2N1Lw" frameborder="0"
-  allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
+  <youtube-placeholder videoId="uQ_kAJ2N1Lw"/>
 
 </mat-card-content>
 </mat-card>
