Adding titles to youtube placeholders

--- a/src/app/sharedcomponents/youtubeplaceholder/youtube_placeholder.html
+++ b/src/app/sharedcomponents/youtubeplaceholder/youtube_placeholder.html
@@ -4,4 +4,5 @@
       alt="YouTube Video"
       loading="lazy">
   <div class="play-button" (click)="onYoutubeClick()"></div>
+  <p>{{title}}</p>
 </div>
