Adding scrim backdrop to new placeholder title text

--- a/src/app/qr/aboutqr/about_qr_page.html
+++ b/src/app/qr/aboutqr/about_qr_page.html
@@ -72,7 +72,7 @@
           Similar to the previous questions, I\'ll just update my code and serving methods.
           Nothing is forever and yes like everything else on the internet it does occasionally
           require some maintenance to stay running. 
-          <iframe loading="lazy" src="https://www.youtube-nocookie.com/embed/BxV14h0kFs0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <youtube-placeholder videoId="BxV14h0kFs0"></youtube-placeholder>
         </div>
       </li>
 
