--- a/src/app/sharedcomponents/youtubeplaceholder/youtube_placeholder.html
+++ b/src/app/sharedcomponents/youtubeplaceholder/youtube_placeholder.html
@@ -4,5 +4,6 @@
       alt="YouTube Video"
       loading="lazy">
   <div class="play-button" (click)="onYoutubeClick()"></div>
-  <p>{{title}}</p>
+  <div class="title-shadow-background" (click)="onYoutubeClick()"></div>
+  <p (click)="onYoutubeClick()">{{title}}</p>
 </div>
