--- a/src/app/sharedcomponents/youtubeplaceholder/youtube_placeholder.scss
+++ b/src/app/sharedcomponents/youtubeplaceholder/youtube_placeholder.scss
@@ -21,6 +21,16 @@ img {
   width: 68px;
 }
 
+.title-shadow-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 20%;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
+  pointer-events: none;
+}
+
 p {
   font-weight: bold;
   left: 16px;
@@ -30,4 +40,5 @@ p {
   text-overflow: ellipsis;
   top: 0%;
   white-space: nowrap;
+  z-index: 2;
 }
