Adding dedicated page for minitron altimeter
Despite there not being substantial enough progress on this project to merit a page, unwrapping the material card out of the <a> tag on the projects page fixes a hydration mismatch issue preventing hydration from being enabled.

--- a/src/app/projects/flipdotdisplay/flip_dot_display.html
+++ b/src/app/projects/flipdotdisplay/flip_dot_display.html
@@ -38,6 +38,13 @@
     <img loading="lazy" imgurId="7IVaHO5"/>
 
     <p>
+      Here is the final result of the frame I built for the panels! The two triangular supports on the back can be
+      adjusted to allow it to be angled more steeply upright, and the power supplies + raspberry PI will be mounted
+      on the rails behind the display.
+    </p>
+    <img loading="lazy" imgurId="KzctrIP"/>
+
+    <p>
       Originally the display driver code was prototyped on an Arduino Uno. The mess of wires and a Raspberry Pi in the
       next photo was what I finally got working. I decided to go with a Raspberry Pi because there were convenient
       libraries for using cheap Intel RealSense depth cameras. The Raspberry Pi output is sent to a logic level
