--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -41,8 +41,7 @@
   </mat-card-content>
 </mat-card>
 
-<a href="https://imgur.com/a/gBYLfQS" target="_blank" class="no-underline">
-  <mat-card>
+  <mat-card routerLink="/altimeter">
     <mat-card-header>
       <mat-card-title>16 Segment Minitron Altimeter</mat-card-title>
       <mat-card-subtitle>falling with style</mat-card-subtitle>
@@ -50,7 +49,7 @@
     <mat-card-content>
       <p>
         The altimeter is a must have instrument every time you go skydiving, so why not make it cool?
-        I savaged several <a href="https://www.industrialalchemy.org/storearticleview.php?item=113" target="_blank">KW-105AL diplays</a>
+        I savaged several <a href="https://www.industrialalchemy.org/storearticleview.php?item=113" target="_blank">KW-105AL displays</a>
         from avionics equipment an the good ol' BMP280 barometer to make an altimeter with.<br>
         Finding even 4 of these displays <i>anywhere</i> online literally took months of scouring.
       </p>
@@ -60,12 +59,11 @@
           alt="closeup of a 16 segment minitron display with all tungsten filament segments brightly lit up"/>
     </mat-card-content>
   </mat-card>
-</a>
 
 <mat-card routerLink="/qr/about">
   <mat-card-header>
     <mat-card-title>QR Code Tattoo</mat-card-title>
-    <mat-card-subtitle>yes, it's permanent</mat-card-subtitle>
+    <mat-card-subtitle>not permanent (yet)</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <p>
