--- a/src/app/sharedcomponents/youtubeplaceholder/youtube_placeholder.scss
+++ b/src/app/sharedcomponents/youtubeplaceholder/youtube_placeholder.scss
@@ -26,7 +26,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  height: 20%;
+  height: 3em;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
   pointer-events: none;
 }
