improving min vertical spacing of pics on projects and travels pages
should load less images in on page load, letting the shown ones load faster and possibly saving data on user if they just don't bother scrolling further down

--- a/src/app/projects/projects_page.scss
+++ b/src/app/projects/projects_page.scss
@@ -21,6 +21,6 @@ mat-card {
 
 /* Without this, the images will be however large they were downloaded to be and stretch the mat-cards to the right. */
 img {
-  min-height: 130px;
+  aspect-ratio: 16 / 9;
   width: 100%;
 }
