--- a/src/app/travels/travels_page.scss
+++ b/src/app/travels/travels_page.scss
@@ -21,6 +21,6 @@ mat-card {
 
 /* Without this, the images will be however large they were downloaded to be and stretch the mat-cards to the right. */
 img {
-  min-height: 130px;
+  aspect-ratio: 16 / 9;
   width: 100%;
 }
