Making css more consistent on a few pages

--- a/src/app/projects/fursuit/fursuit_page.scss
+++ b/src/app/projects/fursuit/fursuit_page.scss
@@ -1,3 +1,14 @@
+:host {
+  display: block;
+  margin: auto;
+  width: fit-content;
+}
+
+mat-card {
+  margin: 20px 5%;
+  max-width: 1400px;
+}
+
 img {
   border-radius: 3px;
   margin: 1em 0;
