--- a/src/app/projects/flipdotdisplay/flip_dot_display.scss
+++ b/src/app/projects/flipdotdisplay/flip_dot_display.scss
@@ -1,5 +1,12 @@
+:host {
+  display: block;
+  margin: auto;
+  width: fit-content;
+}
+
 mat-card {
   margin: 20px 5%;
+  max-width: 1400px;
 }
 
 mat-card-title {
