Adding image viewing dialog to images of substantial size

--- a/src/app/projects/fursuit/fursuit_page.html
+++ b/src/app/projects/fursuit/fursuit_page.html
@@ -27,7 +27,7 @@
 
   <p>
     I started with a 3d printed head-base that I bought from an established maker named
-    <a href="https://www.mixedcandycostumes.com/">MixedCandy</a>, off of their etsy page they sold a
+    <a href="https://www.mixedcandycostumes.com/" target="_blank">MixedCandy</a>, off of their etsy page they sold a
     base with the expression "grumpy K9". Onto this I added several layers of masking tape in alternating grain
     direction and drew on the pattern where color boundaries would be, along with more annotations to help with
     cutting and keeping track of how the pieces align after they're off the head. We'll use these pieces as a
@@ -78,7 +78,7 @@
   <p>
     I wanted not only to make permanent physical anchors holding these key spots in place, but also help dramatically
     speed up my working time while glueing the mask to the base. I opted for
-    <a href="https://aleenes.com/products/aleenes-fabric-fusion-permanent-fabric-adhesive-4-fl-oz">Fabric Fusion</a>
+    <a href="https://aleenes.com/products/aleenes-fabric-fusion-permanent-fabric-adhesive-4-fl-oz" target="_blank">Fabric Fusion</a>
     after weighing a few options because it was a clear permanent fabric glue with a "long" working time of ~ 30
     minutes which still felt like very little time.
   </p>
@@ -157,7 +157,7 @@
   <p>
     I decided to sew it up in left and right halves independently which helped make the amount of material you're
     working with at any moment much more manageable. I added a zipper down the middle front and I followed
-    <a href="https://www.etsy.com/listing/684815037/premium-tutorial-deluxe-zipper-technique">this AMAZING deluxe zipper guide</a>.
+    <a href="https://www.etsy.com/listing/684815037/premium-tutorial-deluxe-zipper-technique" target="_blank">this AMAZING deluxe zipper guide</a>.
   </p>
   <img loading="lazy" imgurId="EZq7jsu" />
   <img loading="lazy" imgurId="1DJgFPL" />
@@ -196,7 +196,7 @@
   </div>
 
   <p>I don't have many progress pics of the tail, but I tried to make it like
-    <a href="https://youtu.be/vFkfsAU17KQ?si=RiKJdsrz2trMiFHL&t=96">a "super motion" tail</a>. I don't think I did a
+    <a href="https://youtu.be/vFkfsAU17KQ?si=RiKJdsrz2trMiFHL&t=96" target="_blank">a "super motion" tail</a>. I don't think I did a
     bad job but I think it would be a lot better. I tried multiple times to get the tail motion right but whenever
     the fur is applied it becomes too stiff and doesn't wag correctly. This is what it looks
     like as the end result:
