--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -8,7 +8,7 @@
     <p>
       A nice and concise set of CSS injections I add to specific websites for better browsing experience.
     </p>
-    <img loading="lazy" imgurId="GVJ06OK" alt="hackerman meme"/>
+    <img loading="lazy" imgurId="GVJ06OK" [preventDialogOpening]="true" alt="hackerman meme image from Kung Fury"/>
   </mat-card-content>
 </mat-card>
 
@@ -23,7 +23,11 @@
         I was able to snag a few of them and recreate the wall in a miniature version! It even uses
         a depth camera to show your silhouette in real time as you move in front of it like the original.
       </p>
-      <img loading="lazy" imgurId="wFl4yZp" alt="A flipdot panel with the text 'hack the planet' written in white flip dots"/>
+      <img
+          loading="lazy"
+          imgurId="wFl4yZp"
+          [preventDialogOpening]="true"
+          alt="A flipdot panel with the text 'hack the planet' written in white flip dots"/>
     </mat-card-content>
   </mat-card>
 
@@ -37,7 +41,11 @@
       I found some art online that inspired me to try out making faux neon signs out of led strips
       tucked inside of diffuser tubing. The end result speaks for itself!
     </p>
-    <img loading="lazy" imgurId="7oWPc71" />
+    <img
+        loading="lazy"
+        imgurId="7oWPc71"
+        [preventDialogOpening]="true"
+        alt="A fake neon sign made from blue, yellow, and red LED strips in diffuser tubing"/>
   </mat-card-content>
 </mat-card>
 
@@ -70,7 +78,7 @@
       The QR code goes to qrtatt.ooo, and can do some very fancy stuff! Click the link in the upper
       right to go to the full page I dedicated to talking about the tattoo.
     </p>
-    <img loading="lazy" imgurId="iFGwWLA" alt="a forearm prominently displaying a tattoo of a black QR code"/>
+    <img loading="lazy" imgurId="iFGwWLA" [preventDialogOpening]="true" alt="a forearm prominently displaying a tattoo of a black QR code"/>
   </mat-card-content>
 </mat-card>
 
@@ -91,7 +99,11 @@
         too much parasitic capacitance or other interference when nestled in the digital watch case.
         I'll need to figure this out to solve it and call it done.
       </p>
-      <img loading="lazy" imgurId="WboU1Qg" alt="a casio digital watch opened up to show custom hardware added around the stock clock element"/>
+      <img 
+          loading="lazy"
+          imgurId="WboU1Qg"
+          [preventDialogOpening]="true"
+          alt="a casio digital watch opened up to show custom hardware added around the stock clock element"/>
     </mat-card-content>
   </mat-card>
 
@@ -108,7 +120,11 @@
       This was a major project where I learned about good battery design, some machining skills, and a
       lot of patience.
     </p>
-    <img loading="lazy" imgurId="MCgCxjL" alt="a mountainboard sitting in dirt pointed downhill towards a large dirt ramp"/>
+    <img
+        loading="lazy"
+        imgurId="MCgCxjL"
+        [preventDialogOpening]="true"
+        alt="a mountainboard sitting in dirt pointed downhill towards a large dirt ramp"/>
   </mat-card-content>
 </mat-card>
 
@@ -128,7 +144,11 @@
         based on <a href="http://www.datasheetspdf.com/pdf-down/H/D/S/HDSP2000_Hewlett-Packard.pdf" target="_blank">these xerox scans</a>
         of old datasheets from the 1970's.
       </p>
-      <img loading="lazy" imgurId="qUIIJmQ" alt="a dot matrix display plugged into a prototyping breadboard, illuminating the characters '0123'"/>
+      <img
+          loading="lazy"
+          imgurId="qUIIJmQ"
+          [preventDialogOpening]="true"
+          alt="a dot matrix display plugged into a prototyping breadboard, illuminating the characters '0123'"/>
     </mat-card-content>
   </mat-card>
 
@@ -148,7 +168,11 @@
         transistor. As this was my first 'major' hardware project, I didn't want to deal with extra IC
         components like a serial to parallel shift register to complicate it any more.
       </p>
-      <img loading="lazy" imgurId="dHJe2YO" alt="a wrist prominently displaying a custom watch made with four nixie tubes lit up showing the current time"/>
+      <img
+          loading="lazy"
+          imgurId="dHJe2YO"
+          [preventDialogOpening]="true"
+          alt="a wrist prominently displaying a custom watch made with four nixie tubes lit up showing the current time"/>
     </mat-card-content>
   </mat-card>
 </div>
