--- a/src/app/travels/half_dome_2022/half_dome_hike_page.html
+++ b/src/app/travels/half_dome_2022/half_dome_hike_page.html
@@ -8,7 +8,8 @@
   <p>
     For several years I had wanted to do the 16 mile out-and-back trail to the top of Half Dome, the most
     iconic mountain in Yosemite. I'd applied to the preseason lotteries for multiple times over the years without
-    success. Eventually I started applying for the <a href="https://www.nps.gov/yose/planyourvisit/hdpermits.htm">Daily Lotteries</a>
+    success. Eventually I started applying for the
+    <a href="https://www.nps.gov/yose/planyourvisit/hdpermits.htm" target="_blank">Daily Lotteries</a>
     and on one fateful Thursday morning, I get an email that the ticket I submitted the night before was selected! I
     had a permit valid for the next morning so after work I packed my car, drove out to Yosemite in the evening, slept
     in my car the best I could, then started the hike about an hour before sunrise.
