--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -47,7 +47,11 @@
       else. A few key experiences made me have second thoughts on that impression, and when I was offered
       a spot at a camp I took it and went to see what the hype was about.
     </p>
-    <img loading="lazy" imgurId="CL5Ra65" alt="a large burning wooden statue known as 'The Man' at Burning Man festival"/>
+    <img
+        loading="lazy"
+        imgurId="CL5Ra65"
+        [preventDialogOpening]="true"
+        alt="a large burning wooden statue known as 'The Man' at Burning Man festival"/>
   </mat-card-content>
 </mat-card>
 
@@ -64,6 +68,7 @@
     <img
         loading="lazy"
         imgurId="z6m5jsM"
+        [preventDialogOpening]="true"
         alt="Blake Williams victoriously standing at the summit of Mount Shasta holding a paper sign showing the date"/>
   </mat-card-content>
 </mat-card>
@@ -81,6 +86,7 @@
     <img
         loading="lazy"
         imgurId="VGU6TyD"
+        [preventDialogOpening]="true"
         alt="Two camel drivers leading two camels towards the horizon on foot across undulating sand dunes in the sahara desert"/>
   </mat-card-content>
 </mat-card>
@@ -120,6 +126,7 @@
     <img
         loading="lazy"
         imgurId="IXVejMH"
+        [preventDialogOpening]="true"
         alt="Half dome mountain from the perspective of sub dome"/>
   </mat-card-content>
 </mat-card>
