--- a/src/app/projects/mountainboard/mountainboard_page.html
+++ b/src/app/projects/mountainboard/mountainboard_page.html
@@ -130,7 +130,7 @@
       There's a popular open source 'dashboard' floating around the Internet called DaveGa, and it uses a 177 x 220px
       screen. I put in effort to rewriting it's display drivers to work with larger format touch screens and a more
       powerful microcontroller to drive the screens at a sufficent refresh rate.
-      <a href="https://github.com/blakewilliams1/DaveGa-ili9341">You can find my modified version of the DaveGA library here.</a>
+      <a href="https://github.com/blakewilliams1/DaveGa-ili9341" target="_blank">You can find my modified version of the DaveGA library here.</a>
     </p>
     <img loading="lazy" imgurId="NOHQO1l" [isLandscape]="true"/>
 
