--- a/src/app/projects/minitronaltimeter/minitron_altimeter_page.html
+++ b/src/app/projects/minitronaltimeter/minitron_altimeter_page.html
@@ -32,6 +32,12 @@
     <img loading="lazy" imgurId="WneVhxB"/>
 
     <p>
+      Eventually I got the LED driver ICs working correctly and got first successful tests done with the real displays!
+      Here is almost all of them one simultaneously to test the wattage load.
+    </p>
+    <img loading="lazy" imgurId="ChU1OGd"/>
+
+    <p>
       Unfortunately this is where the project has been left off, it got stuck at the integration of the LED driver ICs
       but the rest of the project should be relatively straightforward once this is solved. In terms of firmware, there
       is little left to do.
