--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 @use '@angular/material' as mat;
 
 @include mat.core();
@@ -7,15 +6,15 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$personalsite-primary: mat.define-palette(mat.$grey-palette, 500);
-$personalsite-accent: mat.define-palette(mat.$grey-palette, A200, A100, A400);
+$personalsite-primary: mat.m2-define-palette(mat.$m2-grey-palette, 500);
+$personalsite-accent: mat.m2-define-palette(mat.$m2-grey-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$personalsite-warn: mat.define-palette(mat.$red-palette);
+$personalsite-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$personalsite-theme: mat.define-dark-theme((
+$personalsite-theme: mat.m2-define-dark-theme((
   color: (
     primary: $personalsite-primary,
     accent: $personalsite-accent,
