Fixing app routing issue

--- a/src/app/contact/contact_form_page.html
+++ b/src/app/contact/contact_form_page.html
@@ -39,5 +39,7 @@
 
 
 <mat-card *ngIf="formSubmittedSuccessfully">
-  <p>Form submitted successfully! Thank you for reaching out to me :)</p>
+  <mat-card-content>
+    <p>Form submitted successfully! Thank you for reaching out to me :)</p>
+  </mat-card-content>
 </mat-card>
