Better zoom math and dialog aspect ratio

--- a/src/app/qr/aboutqr/about_qr_page.html
+++ b/src/app/qr/aboutqr/about_qr_page.html
@@ -32,7 +32,7 @@
       </li>
 
       <li>
-        <h2>What if you loose the domain?</h2>
+        <h2>What if you lose the domain?</h2>
         <div>
           While nobody (not even large companies) can outright own a domain
           indefinitely, you can lease them for up to 10 years at a time from ICANN.
