Optimizing a few photos

--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -8,7 +8,7 @@
     <p>
       A nice and concise set of CSS injections I add to specific websites for better browsing experience.
     </p>
-    <img loading="lazy" imgurId="GVJ06OK" [preventDialogOpening]="true" alt="hackerman meme image from Kung Fury"/>
+    <img imgurId="GVJ06OK" [preventDialogOpening]="true" alt="hackerman meme image from Kung Fury"/>
   </mat-card-content>
 </mat-card>
 
