--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -12,7 +12,8 @@
       accomplish this one.
     </p>
     <img
-        src="https://advrider.com/f/attachments/p_20240726_144422-jpg.6156665/"
+        imgurId="OWyvgXl"
+        [preventDialogOpening]="true"
         alt="a side shot of a 1994 KLR650 in a driveway fully loaded with 3 metal panniers, ready to be taken on an adventure"/>
   </mat-card-content>
 </mat-card>
@@ -104,10 +105,11 @@
         the Yukon, then rode the Dempster Highway to the town of Tuktoyaktuk, Northwest Territories of Canada to see the
         Arctic Ocean.
       </p>
-      <img
-          loading="lazy"
-          src="https://www.advrider.com/f/attachments/pxl_20220711_173545624-2-jpg.3962085/"
-          alt="Blake Williams sitting on top of his motorcycle next to the Arctic Circle landmark sign">
+    <img
+        loading="lazy"
+        imgurId="2pSca2u"
+        [preventDialogOpening]="true"
+        alt="Blake Williams sitting on top of his motorcycle next to the Arctic Circle landmark sign"/>
     </mat-card-content>
   </mat-card>
 </a>
@@ -143,10 +145,11 @@
         Salt Lake City Utah. This covered ~700 miles of dirt road and many stops along the way at historic
         stations used by the original Pony Express business.
       </p>
-      <img
-          loading="lazy"
-          src="https://www.advrider.com/f/attachments/pxl_20210824_010223547-jpg.3153121/"
-          alt="A 2005 KLR650 motorcycle on a sandy desert trail in the Utah backcountry">
+    <img
+        loading="lazy"
+        imgurId="9JEnCDs"
+        [preventDialogOpening]="true"
+        alt="A 2005 KLR650 motorcycle on a sandy desert trail in the Utah backcountry"/>
     </mat-card-content>
   </mat-card>
 </a>
