Adjusting paragraph text color to lightgrey
Very slight shift in color and gives better hierarchical info/separation between header and body text

--- a/src/app/projects/flipdotdisplay/flip_dot_display.html
+++ b/src/app/projects/flipdotdisplay/flip_dot_display.html
@@ -65,7 +65,7 @@
       This took an EMBARRASSINGLY long time to realize and I finally had to break out the oscilloscope and decode the
       data being sent from each device to find the delta (next image is how it was supposed to look). I was actually
       sending 3 extra empty bytes in front of each intended byte... there was a single line in my code where I
-      accidentally converted an Arduino 'byte' type to 'int' which is 4x the size 🤦‍♂️.
+      accidentally converted an Arduino 'byte' type to 'int' which is 4x the size. 🤦‍♂️
     </p>
     <img loading="lazy" imgurId="ITn7YlV"/>
 
