--- a/src/app/qr/aboutqr/about_qr_page.scss
+++ b/src/app/qr/aboutqr/about_qr_page.scss
@@ -6,7 +6,7 @@
 
 mat-card {
   margin: 20px 5%;
-  max-width: 1000px;
+  max-width: 1400px;
 }
 
 img {
@@ -20,6 +20,10 @@ h1 {
 
 h2 {
   margin: 0;
+}
+
+p {
+  margin-top: 0;
 }
 
 li {
